# vpopmail

./: .clang-format  .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  authvchkpw.c  backfill.c  bigdir.c  clearopensmtp.c  client.c  client.h  conf.c  conf.h  config.h.in  configure  configure.ac  configure.in  dotqmail2valias.c  file_lock.c  file_lock.h  grab.sh  hmac_md5.c  ippp.c  ippp.h  maildirquota.c  maildirquota.h  md5.c  md5.h  mkinstalldirs  quotawarn.msg  seek.c  seek.h  storage.h  vaddaliasdomain.c  vadddomain.c  vadduser.c  valias.c  vauth.h  (+54 more)
cdb/: Makefile  README  THANKS  VERSION
contrib/: adduser.mysql  addusers.pl  cdb_clearpass.sh  checkpassword_debug.README  checkpassword_debug.c  cistron_radius.README  qmail-maildir++.patch  qmail-smtpd-auth.README  sendmail2vpopmail.pl  sqwebmail_update  vcdir.README  vcdir.c  vdirrestore  vdirrestore.README  vlog-support-0.22.README  vpassgen  vpassgen.README  vreorg.c
doc/: AUTHORS  FAQ  INSTALL  README  README.activedirectory  README.authvchkpw  README.defaultdelivery  README.dovecot-pwd-query  README.dovecot-sql-procedures  README.filelocking  README.ipaliasdomains  README.ldap  README.maildrop  README.mysql  README.onchange  README.oracle  README.pgsql  README.qmail-default  README.quotas  README.roamingusers  README.spamassassin  README.sql-aliasdomains  README.sybase  README.vdelivermail  README.vlimits  README.vpopmaild  README.vqmaillocal  README.vrcptcheck  TODO  UPGRADE
doc/doc_html/: vpopmail.html  vpopmail5.abw
doc/man_html/: clearopensmtp.html  index.html  vaddaliasdomain.html  vadddomain.html  vadduser.html  vchkpw.html  vconvert.html  vdeldomain.html  vdelivermail.html  vdeluser.html  vpasswd.html  vpopbull.html  vsetuserquota.html
dovecot/: disable-many-domains_procedures.sql  pwd-query_disable-many-domains.sql
ldap/: nsswitch.conf  pam_ldap.conf  pam_ldap.secret  qmailUser.schema  slapd.conf  valias.schema  vpopmail.ldif
maildrop/: maildroprc.v1  maildroprc.v2
oracle/: oracle.create
vusaged/: ChangeLog  INSTALL  Makefile.in  cache.c  cache.h  configure  configure.ac  directory.c  directory.h  domain.c  domain.h  grow.c  grow.h  list.c  list.h  packet.c  packet.h  path.h  query.c  query.h  queue.c  queue.h  quota.h  shutdown.c  shutdown.h  signal.c  signal.h  socket.c  socket.h  user.c  user.h  userstore.c  userstore.h  vusaged.c
vusaged/contrib/: rc.vusaged
vusaged/etc/: vusaged.conf
